--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="/dist/output.css" rel="stylesheet">
     <title>
-      MindBox
+      chessFirst
     </title>
   </head>
   <body>
